--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 ul {
+    
     border-radius: 10px;
     padding-left: 0;
     margin-bottom: 0;
@@ -18,11 +19,25 @@ ul {
 
 li {
     cursor: pointer;
+    position: relative;
+}
+
+li i {
+    position: absolute;
+    right: 15px;
+    top: 12px;
 }
 
 
 input {
-    border-radius: 7px;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    border-color: black;
+}
+
+button {
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
 }
 
 
